--- a/app/views/orders/manage_orders.html.erb
+++ b/app/views/orders/manage_orders.html.erb
@@ -1,7 +1,7 @@
 <!-- <h1>Welcome, <%= Vendor.find_by_id(session[:vendor_id])%>! </h1> -->
 <div id="header">
   <h3><%= @vendor.username%>: Order Management Page</h3>
-  <h3>Total Revenue: $<%= @vendor.total_rev %>0 </h3>
+  <h3>Total Revenue: $<%= number_with_precision(@vendor.total_rev, precision: 2) %> </h3>
 </div>
 
 <h5 id="center">All Orders</h5>
@@ -26,7 +26,7 @@
       <td><%= link_to order_product.order_id, order_details_path(order_product.order_id)%></td>
       <td><%= order_product.created_at%></td>
       <td><%= link_to Product.find_by_id(order_product.product_id).name, product_path(order_product.product_id)%></td>
-      <td>$<%= number_with_precision(Product.find_by_id(order_product.product_id).price, precision: 2)%>0</td>
+      <td>$<%= number_with_precision(Product.find_by_id(order_product.product_id).price, precision: 2)%></td>
       <td><%= order_product.quantity%></td>
       <td>$<%= number_with_precision(order_product.quantity * Product.find_by_id(order_product.product_id).price, precision: 2) %></td>
       <td><%= Order.find_by_id(order_product.order_id).status%></td>
@@ -59,7 +59,7 @@
         <td><%= link_to order_product.order_id, order_details_path(order_product.order_id)%></td>
         <td><%= order_product.created_at%></td>
         <td><%= link_to Product.find_by_id(order_product.product_id).name, product_path(order_product.product_id)%></td>
-        <td>$<%= Product.find_by_id(order_product.product_id).price%>0</td>
+        <td>$<%= Product.find_by_id(order_product.product_id).price%></td>
         <td><%= order_product.quantity%></td>
         <td>$<%= order_product.quantity * Product.find_by_id(order_product.product_id).price %></td>
         <td><%= Order.find_by_id(order_product.order_id).status%></td>
