--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,11 @@
 
 <body>
   <header>
-  <div>
-
-    <h1 id="title">Indulge</h1>
-    <nav>
+    <div class="row float-right">
+      <nav>
         <ul class="secondary">
           <% if session[:vendor_id] %>
-                <li><%= link_to "Your account", vendor_account_path%></li>
+          <li><%= link_to "Your account", vendor_account_path%></li>
           <% end %>
           <li>
             <% unless session[:vendor_id] %>
@@ -33,17 +31,18 @@
         </ul>
       </nav>
     </div>
-
-  <nav class="clearfix">
-    <ul class="primary">
-      <li class="left"><%= link_to "Home", root_path %></li>
-      <li class="left"><%= link_to "All products", products_path %></li>
-      <li class="left"><%= link_to "Browse categories", categories_path %></li>
-      <li class="left"><%= link_to "Browse vendors", vendors_path %></li>
-    </ul>
-  </nav>
-
-
+    <div class="row clearfix logo">
+      <h1 id="logo"><%= link_to "Indulge", root_path %></li></h1>
+    </div>
+    <div class="row">
+      <nav class="clearfix">
+        <ul class="primary">
+          <li><%= link_to "All products", products_path %></li>
+          <li><%= link_to "Browse categories", categories_path %></li>
+          <li><%= link_to "Browse vendors", vendors_path %></li>
+        </ul>
+      </nav>
+    </div>
 </header>
 
   <section class="flash">
