--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,5 +51,12 @@
 </header>
 
   <%= yield %>
+<footer>
+  <p><strong>Foodalicious Four &copy; 2017 </strong></p>
+  <p>1215 4th Ave #1050</p>
+  <p>Seattle, WA 98161</p>
+  <p>224.225.5235</p>
+  <p><%= link_to "foodiliciousfour.herokuapp.com", root_path %></p>
+</footer>
 </body>
 </html>
