--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,8 +1,11 @@
 <main>
 <ul>
   <% @categories.each do |category| %>
-  <%= image_tag category.image_url %>
-  <li><%= link_to category.name, category_products_path(category.id) %></li>
+
+  <h5 class="welcome"><%= link_to category.name, category_products_path(category.id) %></h5>
 </ul>
+<div class="center">
+  <%= image_tag category.image_url %>
+</div>
   <% end %>
 </main>
