--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,11 +1,13 @@
 <main>
-<ul>
   <% @categories.each do |category| %>
-
-  <h5 class="welcome"><%= link_to category.name, category_products_path(category.id) %></h5>
-</ul>
-<div class="center">
-  <%= image_tag category.image_url %>
+  <div class="hero-image">
+    <%= link_to category_products_path(category.id) do %>
+      <%= image_tag category.image_url %>
+    <% end %>
+    <div class="hero-content">
+      <h2><%= category.name %></h2>
+    </div>
+  </section>
 </div>
   <% end %>
 </main>
