--- a/app/views/orders/_orderdetail.html.erb
+++ b/app/views/orders/_orderdetail.html.erb
@@ -1,3 +1,4 @@
+<main>
 <article class="order-detail">
     <section class="row">
 <h3>Order Number: <%= @order.id%> </h3>
@@ -29,3 +30,4 @@
 </table>
 Total: <%= total.inject(:+) %>
 </article>
+</main>
