--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -1,3 +1,5 @@
+<main>
+<article class="checkout">
 <%= form_for @order do |f| %>
   <%= f.hidden_field :purchase_date, value: Date.today %>
   <%= f.hidden_field :status, value: "paid" %>
@@ -9,5 +11,50 @@
   <%= f.text_field :credit_card %>
   <%= f.label :cc_expire %>
   <%= f.text_field :cc_expire %>
-  <%= f.submit "Place Order" %>
+  <div class="button success"><%= f.submit "Place Order" %></div>
 <% end %>
+</article>
+</main>
+
+<form class="large-4 large-offset-4 columns">
+  <div class="row">
+      <div class="large-12 columns">
+        <h2>Submit Payment</h2>
+      </div>
+  </div>
+  <div class="row">
+    <div class="large-12 columns">
+      <label>Name on Card
+        <input type="text" name="cardholder" placeholder="" />
+      </label>
+    </div>
+    <div class="large-12 columns">
+      <label>Card Number
+        <input type="text" name="cardnumber" placeholder="" />
+      </label>
+    </div>
+    <div class="large-12 columns">
+      <label>Billing Address
+        <input type="text" name="address" placeholder="" />
+      </label>
+    </div>
+    <div class="large-4 columns">
+      <label>Exp Month
+        <input type="text" name="expmonth" placeholder="MM" />
+      </label>
+    </div>
+    <div class="large-4 columns">
+      <label>Exp Year
+        <input type="text" name="expyear" placeholder="YYYY" />
+      </label>
+    </div>
+    <div class="large-4 columns">
+      <label>CVC Code
+        <input type="text" name="cvccode" placeholder="ex: 123" />
+      </label>
+    </div>
+    <div class="large-12 columns">
+      <button class="button success">Pay Now</button>
+    </div>
+  </div>
+</form>
