--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
             <%= link_to "Sign out", logout_path, method: :delete %>g
             <% end %>
           </li>
-          <li class="highlight"><%= link_to "Cart", order_cart_path(session[:order_id]) %><i class="icon-shopping-cart"></i></li>
+          <li class="highlight"><%= link_to "Cart", order_cart_path(session[:order_id]) %><i class="shopping-cart"></i></li>
         </ul>
       </nav>
     </div>
