--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,10 +25,6 @@ main, footer {
    padding: 45px;
  }
 
-main, header, footer {
-  padding: 45px;
-}
-
 header {
   padding: 30px, 45px, 15px, 45px;
   background-color: SmokeGrey;
@@ -111,7 +107,6 @@ footer {
   -webkit-transform: rotate(-3deg); /* Chrome, Safari, Opera */
   transform: rotate(-3deg);
   padding-bottom: 15px;
-  padding-top: 30px;
 }
 
 h1#logo, ul.primary {
@@ -126,13 +121,19 @@ div .price {
   hanging-punctuation: first;
 }
 
+nav {
+  padding-top: 45px;
+}
+
 nav ul {
   list-style-type: none;
 }
 
 ul.primary li {
   display: inline-block;
-  padding: 0px 30px;
+  padding: 0px 5px;
+  text-transform: uppercase;
+  font-size: .9em;
 }
 
 li.highlight a, a:hover {
