--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,9 @@
   <%= image_tag @image %>
   <div class="hero-content">
     <h2><h2><%= @header %></h2></h2>
-    <h4><%= @description %></h4>
+    <div class="row">
+    <h4 class="small-12 medium-8 columns"><%= @description %></h4>
+    </div>
     <% if params[:vendor_id] %>
       <a href="#" class="button">Contact</a>
     <% end %>
