--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -90,8 +90,8 @@ footer {
   font-weight: bold;
 }
 
-.flash {
-  background-color: #f5f5f5;
+.flash .success p {
+  background-color: green;
   padding: 15px, 0px, 15px, 45px;
 }
 
