--- a/app/views/orders/manage_orders.html.erb
+++ b/app/views/orders/manage_orders.html.erb
@@ -1,4 +1,5 @@
 <!-- <h1>Welcome, <%= Vendor.find_by_id(session[:vendor_id])%>! </h1> -->
+<main>
 <div id="header">
   <h3><%= @vendor.username%>: Order Management Page</h3>
   <h3>Total Revenue: $<%= number_with_precision(@vendor.total_rev, precision: 2) %> </h3>
@@ -104,3 +105,4 @@
         <% end %>
       <% end %>
       </table>
+    </main>
