Styled button for vendor

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -141,9 +141,30 @@ li.highlight a, a:hover {
 }
 
 .button {
+  background-color: #ffffff;
+  color: #E24E42;
+  border: 2px solid #E24E42;
+  border-radius: 500px;
+  text-transform: uppercase;
+}
+
+.button:hover {
+  color: #ffffff;
   background-color: #E24E42;
 }
 
+.white-button {
+  background-color: Transparent;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+  border-radius: 500px;
+  text-transform: uppercase;
+}
+
+.white-button:hover {
+  background-color: #ffffff;
+  color: #000000;
+}
 
 li.highlight a:hover {
   color: gray;
