--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
     <h2><h2><%= @header %></h2></h2>
     <h4><%= @description %></h4>
     <% if params[:vendor_id] %>
-      <a href="#" class="button">Contact</a>
+      <a href="#" class="button white-button">Contact</a>
     <% end %>
   </div>
 </div>
