--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,8 +1,12 @@
 <main>
   <h1>Add a New Category</h1>
-  <%= form_for @category do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.submit %>
-  <% end %>
+  <div class="row">
+    <section class="small-12 large-8 columns">
+      <%= form_for @category do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+      <%= f.submit :class => "button" %>
+      <% end %>
+    </section>
+  </div>
 </main>
