--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
 
   <%= yield %>
 <footer>
-  <p><strong>Foodalicious Four &copy; 2017 </strong></p>
+  <p><strong>&copy; 2017 Foodalicious Four</strong></p>
   <p>1215 4th Ave #1050</p>
   <p>Seattle, WA 98161</p>
   <p>224.225.5235</p>
