--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -15,7 +15,9 @@
       <%= link_to "+", product_add_to_cart_path(order_product.product_id), method: :post %>
       <%= order_product.quantity %>
       <%= link_to "-", product_remove_from_cart_path(order_product.product_id), method: :post %></td>
-    <td><%= number_with_precision(Product.find(order_product.product_id).price, precision: 2) * order_product.quantity %></td>
+    <!-- <td><%= number_with_precision(Product.find(order_product.product_id).price, precision: 2)*order_product.quantity %></td> -->
+    <td>$<%= number_with_precision(Product.find(order_product.product_id).price * order_product.quantity, precision: 2) %></td>
+
   </tr>
     <% end %>
   <% end %>
@@ -23,6 +25,9 @@
 <% if @order.status != "pending" %>
   <p>"you have not added any items to your cart"</p>
 <% end %>
+
 <% if @order.order_products != nil %>
+<div class="button">
 <%= link_to "Checkout", order_checkout_path(@order.id) %>
 <% end %>
+</div>
