--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -219,3 +219,16 @@ table.center {
 .review {
   width: 95%;
 }
+/*#checkout {
+  padding: 40px;
+  border: dashed;
+  border-width: thin;
+  border-color: darkgray;
+  border: 20px;
+}*/
+
+.cart {
+  padding: 0px 5px;
+  color: darkgray;
+  font-family: helvetica
+}
