--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -1,17 +1,22 @@
 <main>
-<article class="checkout">
-<%= form_for @order do |f| %>
-  <%= f.hidden_field :purchase_date, value: Date.today %>
-  <%= f.hidden_field :status, value: "paid" %>
-  <%= f.label :cust_email %>
-  <%= f.email_field :cust_email %>
-  <%= f.label :cust_address %>
-  <%= f.text_field :cust_address %>
-  <%= f.label :credit_card %>
-  <%= f.text_field :credit_card %>
-  <%= f.label :cc_expire %>
-  <%= f.text_field :cc_expire %>
-  <%= f.submit class: "button success" "Place Order" %>
+<article>
+  <div class="row">
+    <section class="small-12 large-8 columns">
+  <section id="checkout"><%= form_for @order do |f| %>
+    <%= f.hidden_field :purchase_date, value: Date.today %>
+    <%= f.hidden_field :status, value: "paid" %>
+    <%= f.label :cust_email %>
+    <%= f.email_field :cust_email %>
+    <%= f.label :cust_address %>
+    <%= f.text_field :cust_address %>
+    <%= f.label :credit_card %>
+    <%= f.text_field :credit_card %>
+    <%= f.label :cc_expire %>
+    <%= f.text_field :cc_expire %>
+    <%= f.submit class: "button" "Place Order" %>
 <% end %>
+</section>
+</section>
+</div>
 </article>
 </main>
