--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,6 @@
  @import url('https://fonts.googleapis.com/css?family=Yellowtail');
 
 
-
 main, footer {
    padding: 45px;
  }
@@ -90,8 +89,8 @@ footer {
   font-weight: bold;
 }
 
-.flash {
-  background-color: #f5f5f5;
+.flash .success p {
+  background-color: green;
   padding: 15px, 0px, 15px, 45px;
 }
 
@@ -140,6 +139,31 @@ li.highlight a, a:hover {
   color: #E24E42;
 }
 
+.button {
+  background-color: #ffffff;
+  color: #E24E42;
+  border: 2px solid #E24E42;
+  border-radius: 500px;
+  text-transform: uppercase;
+}
+
+.button:hover {
+  color: #ffffff;
+  background-color: #E24E42;
+}
+
+.white-button {
+  background-color: Transparent;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+  border-radius: 500px;
+  text-transform: uppercase;
+}
+
+.white-button:hover {
+  background-color: #ffffff;
+  color: #000000;
+}
 
 li.highlight a:hover {
   color: gray;
@@ -162,18 +186,12 @@ a {
   color: gray;
 }
 
-.manage {
-  position: relative;
-  display: block;
-  width: 80%;
-  left: 9%;
-  background-color: white
-
+.manage-buttons {
+  text-align: center;
 }
 
-.manage:hover {
-  background-color: white;
-
+.manage-buttons:first-of-type {
+  padding-top: 30px;
 }
 
 .welcome {
@@ -216,6 +234,23 @@ table.center {
   margin-left: auto;
   margin-right: auto;
 }
-.review {
-  width: 95%;
+
+/*#checkout {
+  padding: 40px;
+  border: dashed;
+  border-width: thin;
+  border-color: darkgray;
+  border: 20px;
+}*/
+
+.cart {
+  padding: 0px 5px;
+  color: darkgray;
+  font-family: helvetica
+}
+
+#prod {
+  padding: 0px 5px;
+  color: darkgray;
+  font-family: helvetica
 }
