--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,5 @@
-  <h1>Categories</h1>
+<main>
+    <h2 id="prod">Categories</h2>
   <% @categories.each do |category| %>
   <div class="hero-image category-index-images">
     <%= link_to category_products_path(category.id) do %>
@@ -10,3 +11,4 @@
   </section>
 </div>
   <% end %>
+</main>
