--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,13 +13,13 @@
         <li class="is-active orbit-slide">
           <img class="orbit-image" src="https://i.imgur.com/16z9ObN.jpg" alt="Space">
           <figcaption class="orbit-caption">
-            <h1>Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit.</h1>
+            <h1>Treat yo self. <br></h1>
           </figcaption>
         </li>
         <li class="orbit-slide">
           <img class="orbit-image" src="https://i.imgur.com/JD4Caxa.jpg" alt="Space">
           <figcaption class="orbit-caption">
-            <h1>Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit.</h1>
+            <h1>Treat yo self. again.  <br></h1>
           </figcaption>
         </li>
         <li class="orbit-slide">
