--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -32,7 +32,7 @@
           <%# f.text_area :comment %>
           <%= f.hidden_field :product_id, value: @product.id %>
 
-          <input type="submit" class="success button" name="commit" value="Create Review" data-disable-with="Create Review">
+          <input type="submit" class="button" name="commit" value="Create Review" data-disable-with="Create Review">
           <%# f.submit class: "success button"%>
 
         </fieldset>
